tests/snapshots/run_wpt_conformance__litert_floor_float32_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "floor.https.any.js",
    "floor float32 2D tensor",
    "litert",
    "PASS",
)
