tests/snapshots/run_wpt_conformance__litert_gatherElements_float16_2D_input_and_int32_indices_options_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gatherElements.https.any.js gatherElements float16 2D input and int32 indices options.axis=0, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: GatherElements { input: 1, indices: 0, batch_dimensions: None, options: Some(MLGatherOptions { label: "", axis: 0 }), outputs: [2] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherElementsInput: f16[3, 3];
  }

  consts {
    operand_0: i32[2, 3] @bytes([1, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]);
  }

  nodes {
    [gatherElementsOutput] = gatherElements(gatherElementsInput, operand_0, axis=0, label="");
  }

  outputs { gatherElementsOutput; }
}
