tests/snapshots/run_wpt_conformance__litert_gatherElements_float32_1D_input_and_int32_out-of-bounds_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gatherElements.https.any.js",
    "gatherElements float32 1D input and int32 out-of-bounds indices",
    "litert",
    "PASS",
)
